# DocuMind

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  rate_limit.py
backend/app/api/: documents.py  query.py
backend/app/generation/: answer.py
backend/app/indexing/: embedder.py  lexical_store.py  vector_store.py
backend/app/ingestion/: chunker.py  parser.py  pipeline.py
backend/app/llm/: base.py  bedrock.py  factory.py  groq.py  ollama.py
backend/app/retrieval/: fusion.py  lexical.py  reranker.py  vector.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatWindow.tsx  DocumentList.tsx  MessageBubble.tsx  SourceCitation.tsx  UploadZone.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts
