[project]
name = "documind-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",     # file uploads
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "docling>=2.5.0",
    "langchain-text-splitters>=0.2.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0", # cross-encoder reranker
    "numpy>=1.26",                  # sigmoid on rerank scores
    "boto3>=1.34.0",               # AWS Bedrock
    "httpx>=0.27.0",               # Ollama HTTP calls
    "aiofiles>=23.2.0",
    "python-slugify>=8.0.0",
    "tenacity>=8.3.0",             # retries
]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-asyncio", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]